# otb-sandbox

./: CMakeLists.txt  ExtractPlot.cxx  FilteringPipeline.cxx  Multispectral.cxx  OrthoFusion.cxx  Pipeline.cxx  ScalingPipeline.cxx  SmartFilteringPipeline.cxx
